change developer site

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function noselect(){return false;}
                 <div class="col-md-6">
                     <div class="copy_right_text">
                         <p>Copyright &copy; 2017. Все права зарегистрированы</p>
-						<p>SITE DEVELOPED BY <a href="https://lolmaxlik.github.io/"target="_blank">Ilya Lebedev</a></p>
+						<p>SITE DEVELOPED BY <a href="https://lolmaxlik.tk/"target="_blank">Ilya Lebedev</a></p>
 				</div>
                 </div>
                 <div class="col-md-6">
