Squashed change * Update prettyPhoto from official site * Fix photo-zoom in carousel

--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@ function noselect(){return false;}
             <div id="demo" class="wow bounceInRight" data-wow-duration="1s">
                 <div id="owl-demo" class="owl-carousel">
                     <div class="item">
-                        <a href="images/photos/Capture04.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture04.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/Capture04.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture04.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/photos/Capture05.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture05.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/Capture05.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture05.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/photos/Capture06.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture06.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/Capture06.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture06.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/photos/Capture07.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture07.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/Capture07.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture07.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="images/photos/Capture08.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture08.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/Capture08.jpg" rel="prettyPhoto[pp_gal]"><img src="images/Capture08.jpg" width="60" height="60" alt="APPS SCREEN" /></a>
                     </div>
                 </div>
             </div>
