--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ function noselect(){return false;}
     <script src="js/owl.carousel.js"></script>
     <script src="js/jquery.fitvids.js"></script>
     <script src="js/smoothscroll.js"></script>
-    <script src="js/jquery.parallax-1.1.3.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/parallax.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/jquery.ajaxchimp.min.js"></script>
     <script src="js/jquery.ajaxchimp.langs.js"></script>
